changed ui from signin and signup page (fixed spacing and borders)

--- a/Frontend/src/components/Authentication/InputField.css
+++ b/Frontend/src/components/Authentication/InputField.css
@@ -1,3 +1,8 @@
+:root {
+  --red: rgb(230, 38, 38);
+  --green: rgb(36, 207, 53);
+}
+
 .inputField {
   box-sizing: border-box;
 
@@ -8,7 +13,7 @@
   height: 40px;
 
   margin: 10px 0 20px 0;
-  padding: 0 0 0 10px;
+  padding: 0;
 
   border-radius: 3px;
   border: 1px solid #b2b2b2;
@@ -16,25 +21,36 @@
 
   font-size: 1rem;
   outline-width: 0;
+
+  display: inline-block;
+  position: relative;
 }
 
-.invalid:focus,
-.valid:focus {
+.inputField input {
+  width: calc(100% - 10px);
+  height: 100%;
+  border: 0;
+  outline: 0;
+  margin: 0;
+  padding: 0 0 0 10px;
+}
+
+.inputField:focus-within {
   border-left: 2px solid #525252;
   border-top: 2px solid #525252;
   border-right: 2px solid #525252;
 }
 
-.unset:focus {
+.inputField:focus-within.unset {
   border: 2px solid #525252;
 }
 
 .invalid {
-  border-bottom: 3px solid red;
+  border-bottom: 3px solid var(--red);
 }
 
 .valid {
-  border-bottom: 3px solid green;
+  border-bottom: 3px solid var(--green);
 }
 
 label {
@@ -44,6 +60,52 @@ label {
 }
 
 .info {
+  display: none;
+}
+
+.infoButton:hover + .info {
+  display: block;
+  position: absolute;
+  right: -277px;
+  top: -1px;
+  z-index: 1;
+
   line-height: 0.5rem;
   text-align: left;
+
+  padding: 0 10px 0 10px;
+  background-color: white;
+  border: 1px solid #b2b2b2;
+  border-radius: 3px;
+}
+
+.infoButton:hover {
+  cursor: default;
+}
+
+.infoButton {
+  position: absolute;
+  top: -32px;
+  right: 4px;
+
+  width: 20px;
+  height: 20px;
+
+  color: #b2b2b2;
+  border: 2px solid #b2b2b2;
+  border-radius: 50%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.invalid .infoButton {
+  border: 2px solid var(--red);
+  color: var(--red);
 }
