--- a/Frontend/src/components/Authentication/SignIn.css
+++ b/Frontend/src/components/Authentication/SignIn.css
@@ -40,3 +40,8 @@ button:disabled {
 .col-span-2 {
   grid-column: span 2;
 }
+
+input {
+  font-family: "Lato", sans-serif;
+  color: #525252;
+}
